# llvm-project

./: .env.example  .gitignore  CMakeLists.txt  COMMANDS.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DetectConstructors.cpp  GITHUB_SETUP.md  GROQ_SUMMARIES.md  README.md  README_LLVMComplianceTool.md  a.out  add_groq_summaries.py  benchmark.py  check_highlighted.bat  compliance-tool.py  enum_parser.py  enums.hpp  generate_diff_html.py  generate_with_summaries.sh  generated_maps.hpp  heatmap.html  highlighted.ll  llvm-source-mapper.sh  main_test.cpp  main_test_program  output  simple_enums.cpp  test  test.c  test.cpp  test.ll  test1.cpp  test4.c  test4.ll  test5.ll  test_enum.cpp
1.llvm-clang - Copy/: .gitignore  CMakeLists.txt  README.md  cmake.bat  demo.sh  demo_enhanced.py  discover_tests.py  generate_reference.py  install_deps.bat  install_deps.sh  ompir_map.py  refer.txt  test.bat  test.cpp  test.ll  test1.cpp  test1.ll  test2.cpp  test2.ll  test_test1.cpp
1.llvm-clang - Copy/config/: default.toml
1.llvm-clang - Copy/examples/: sample_omp.cpp
1.llvm-clang - Copy/output/: annotated.ll  mapping.json  openmp_reference.html  recommended_tests.txt
1.llvm-clang - Copy/output/test_suite/: summary_report.html
1.llvm-clang - Copy/src/: config.cpp  config.h  directive_descriptions.cpp  directive_descriptions.h  html_reporter.cpp  html_reporter.h  ir_annotator.cpp  ir_annotator.h  main.cpp  omp_parser.cpp  omp_parser.h
GEN_AI_PR_DESC/: .gitignore  app.py
Implicit Ctor Invocations/: CMakeLists.txt  ImplicitCtorDetector.cpp  example.cpp
Issue_16/MPI_Uniform_Participation_Analysis/: CMakeLists.txt  README.md
Issue_16/MPI_Uniform_Participation_Analysis/src/: main.cpp
MPIReduction/: CMakeLists.txt  README.md  build.md
MPIReduction/include/: MPIReductionAnalyzer.h  MPIReductionPass.h  ReductionDetector.h  Utils.h
MPIReduction/src/: MPIReductionAnalyzer.cpp  MPIReductionPass.cpp  ReductionDetector.cpp  Utils.cpp  main.cpp
MPIReduction/test/: mpi.h  test_reduction.ll  testit.c  testit.ll
astwgroq/: ast.json  astwgroq  astwgroq.cpp  main.py  output.txt  source.cpp
clang/: CMakeLists.txt
clang-ast-mapper/: LICENSE  README.md  ast_line_mapper.py  auto_decltype_ast.json  auto_output.csv  auto_output_interpretation.md  complex_ast.json  complex_output.csv  complex_output_interpretation.md  main.py  modern_output.csv  modern_output_interpretation.md  requirements.txt  run_web_app.bat  run_web_app.ps1  run_web_app.sh  setup.py  simple_ast.json  simple_modern_ast.json  simple_output.csv  simple_output_interpretation.md  simple_table.txt  tmp7le5fezq_ast.json  tmpclfx01hh_ast.json  tmpff0uilk6_ast.json  tmpgc0sme0f_ast.json  tmpmr5max4f_ast.json  tmpnv9q0rre_ast.json  tmpsme749t8_ast.json  tmpu73o944j_ast.json  tmpuwobzv73_ast.json  tmpv0u841km_ast.json  tmpvd0pqiky_ast.json
clang-genai-review-setup/: README.md
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/OpenMPTool/: CMakeLists.txt  OpenMPTool.cpp  README.md  generate_test.py
clang-tools-extra/OpenMPTool/sample-tests/: test11.c  test11c.c
clang-tools-extra/OpenMP_Test_Case_Generation/: CMakeLists.txt  readme.md
clang-tools-extra/OpenMP_Test_Case_Generation/SampleOutputs/: pr_67890_codegen_test_1.cpp  pr_67890_sema_test_1.cpp  pr_67890_sema_test_2.cpp  pr_67890_sema_test_3.cpp
clang-tools-extra/OpenMP_Test_Case_Generation/config/: config.h
clang-tools-extra/OpenMP_Test_Case_Generation/include/: OpenMPTestGenerator.h
clang-tools-extra/OpenMP_Test_Case_Generation/scripts/: install_deps.sh  setup.sh
clang-tools-extra/OpenMP_Test_Case_Generation/src/: openmp-test-gen.cpp
clang-tools-extra/clang-mpi-analyser/: CMakeLists.txt  README.md  test2.cpp  test3.cpp  test4.cpp
clang-tools-extra/clang-mpi-analyser/tool/: MPIAction.cpp  MPIAction.h  MPIAnalysisHelperFuncs.cpp  MPIAnalysisHelperFuncs.h  MPIAnalyzer.cpp  MPIAnalyzer.h  MPIConsumer.h  main.cpp
clang-tools-extra/mpi-analyzer/: CMakeLists.txt  MPIAnalyzer.cpp
clang-tools-extra/regular-mem-access/: CMakeLists.txt  RegularMemAccess.cpp  RegularMemAccessPass.cpp  test.c
clang/tools/Computational_Intensity/: CMakeLists.txt  ComputationalIntensityPass.cpp  README.md
clang/tools/Computational_Intensity/tests/: abs_diff_sum.ll  clear_array.ll  copy_array.c  fused_op.c  matrix_mult.c  matrix_mult.ll  power_series.ll  reciprocal_sqrt.c  reciprocal_sqrt.ll  running_average.ll  square_array.ll  trig_compute.c
clang/tools/ai-powered-reviewer-suggestion-tool/: .gitignore  CMakeLists.txt  README.md
clang/tools/ai-powered-reviewer-suggestion-tool/docs/: IMPLEMENTATION_GUIDE.md
clang/tools/ai-powered-reviewer-suggestion-tool/include/: BertTokenizer.h  GitHubFetcher.h  PRData.h  PRParser.h  ReviewerSuggester.h
clang/tools/ai-powered-reviewer-suggestion-tool/scripts/: example_usage.sh  setup_macos.sh
clang/tools/ai-powered-reviewer-suggestion-tool/src/: BertTokenizer.cpp  GitHubFetcher.cpp  PRParser.cpp  ReviewerSuggester.cpp  main.cpp
clang/tools/extra/clang-omp-suggestion/: CMakeLists.txt  clang-omp-suggestion.cpp  requirements.txt
clang/tools/extra/clang-omp-suggestion/scripts/: 01_fetch_prs.py  02_process_data.py  03_train_model.py
genai-tools/: genai_openmp_ir_explainer.py
ir-diff-visualizer/: .gitignore  enhanced_ir_differ.py  frontend.py  genai.py  hello.py  html_report.py  ir_diff.py  main.py  requirements.txt  utils.py
issue-39-source-to-ast/: .gitignore  README.md  annotate.py  app.py
llvm/: CMakeLists.txt
llvm-pointer-tracer/: README.md  build_pass_test.sh  test.sh  test_save.sh
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassRegistry.def  StandardInstrumentations.cpp
llvm/lib/Transforms/HighlightFunction/: CMakeLists.txt  MyPass.cpp
llvm/tools/clang-annotator/: CMakeLists.txt  ClangAnnotator.cpp
omp-ir-mapper/: CMakeLists.txt  main.cpp  test.cpp  test.ll  test.ll.annotated.ll
omp-testcases/: README.md  generator.py  getdiff.py
openmp-mapper/: openmp-mapper-ai.cpp  openmp-mapper-fixed.cpp  run_test_suite.sh  test_ai_with_suite.sh
papi_instrumentation/tool/: CMakeLists.txt
src/: SourceMapper.cpp  (+1 more)
(+1404 files in other folders)
